src/components/Homepage/Contact.css
.contact {
    position: relative;
    background-color: var(--light-gray-color);
    width: 100vw;
    transform: translateX(-5%);
    padding: 4rem 5%;
    margin-bottom: 0;
    z-index: 10;
}

.contact.open:hover {
    background-color: var(--light-gray-color);
}

.contact.open:hover h2 {
    color: black;
}

.contact:hover {
    background-color: #D9D9D9;
}

.contact:hover h2 {
    color: blue;
}

.contact h3 {
    font-size: 4rem;
    font-weight: 600;
    color: #333;
}

.contact h2 {
    font-size: 8rem;
}

.contact-content {
    max-height: 0;
}

.contact-content.open {
    height: 100%;
    max-height: 1000px;
    transition: max-height 0.5s ease-in-out;
}

.contact-content p {
    font-weight: 600;
    font-size: 1.25rem;
}

.contact-form {
    display: flex;
    flex-direction: column;
    padding: 4rem 0;
    gap: 1rem;
}

.contact-form input {
    max-width: 500px;
}

.contact-form textarea {
    min-height: 200px;
    max-width: 1000px;
}

.contact-form input[type="submit"] {
    width: fit-content;
    color: white;
    background-color: black;
    border-style: none;
    border-width: 0;
    font-weight: 500;
    padding: 0.5rem 1rem;
    margin-top: 2rem;
}

